# alphalab

./: .env  .env.example  .gitignore  API_REQUIREMENTS.md  CI_CD_SETUP_COMPLETE.md  DEVELOPER_SETUP.md  Dockerfile  POLYGON_SETUP.md  QUICK_REFERENCE.md  README.md  REDESIGN_MOCKUP_LOWER_HALF.md  docker-compose.yml  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt  run.sh  tabbed_analysis_page.html  watchlists_migration.py  wsgi.py
.github/: BRANCH_PROTECTION.md  CI_CD_GUIDE.md
.github/workflows/: advanced-checks.yml  ci-cd.yml  ci.yml  deploy.yml  quality.yml
alphalab_ml/: __init__.py  flask_api.py
credentials/: firebase-key.json
docs/: ARCHITECTURE.md  CAREER_GUIDE.md  CI_CD_PIPELINE.md  DEPLOYMENT.md  ML_MODEL.md
factor-lab/scripts/: run_backtest.py
factor-lab/src/: backtest.py  beginner_guide.py  data.py  factor_delay.py  factors.py  macro.py  metrics.py  plotting.py  portfolio.py  scorer.py  sentiment.py  signal_history.py  watchlists.py
factor-lab/test/: test_factors.py
factor-lab/test /: test_factors.py  test_metrics.py
flask_app/: alphavantage_provider.py  app.py  cache_utils.py  config.py  polygon_provider.py  ticker_fetch.py  yfinance_utils.py
flask_app/routes/: __init__.py  dashboard.py
flask_app/services/: __init__.py  supabase_service.py
flask_app/static/: ml_metrics_widget.js  service-worker.js  theme.css  theme.js
flask_app/templates/: home.html  (+5 more)
scripts/: run_backtest.py
src/: backtest.py  plotting.py
test /: test_factors.py
tests/: conftest.py  test_app.py  test_finbert.py  test_sentiment_output.py
